legacy_devops/terraform/core/us-east-2/securitygroups.tf
# Security group for vpn
resource "aws_security_group" "vpn" {
  name        = "${var.aws_region} :: vpn_security_group"
  description = "Security group for the VPN node"
  vpc_id      = "${aws_vpc.default.id}"

  # SSH access from anywhere
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTP access from the VPC
  ingress {
    from_port   = 1194
    to_port     = 1194
    protocol    = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Region = "${var.aws_region}"
  }
}

resource "aws_security_group" "queue" {
  name        = "${var.aws_region} :: default_security_group"
  description = "Security group for the Queue node"
  vpc_id      = "${aws_vpc.default.id}"

  # SSH access from anywhere
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # outbound internet access
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Region = "${var.aws_region}"
  }
}
